# mealie-recommender

./: README.md
app/: README.md  pyproject.toml
app/app/: exceptions.py  main.py  mealie.py
app/app/routers/: model.py  recipes.py
